[gd_scene load_steps=2 format=3 uid="uid://bj4lx0ojyrbmu"]

[ext_resource type="Script" path="res://World/Screens/stats.gd" id="1_dmeo0"]

[node name="Stats" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dmeo0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.207843, 0.207843, 0.207843, 0.458824)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 115.2
offset_top = 64.8
offset_right = -115.2
offset_bottom = -64.8
grow_horizontal = 2
grow_vertical = 2
color = Color(0.207843, 0.207843, 0.207843, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 28.0
offset_right = 0.399963
offset_bottom = -25.4
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Label17" type="Label" parent="ColorRect2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Total Hits:"
horizontal_alignment = 1

[node name="Label" type="Label" parent="ColorRect2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Amount Shot:"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="ColorRect2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Amount Hit:"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="ColorRect2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Accuracy: Unknown"
horizontal_alignment = 1

[node name="Label12" type="Label" parent="ColorRect2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Multi Hits: "
horizontal_alignment = 1

[node name="Label16" type="Label" parent="ColorRect2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Total Hits:"
horizontal_alignment = 1

[node name="Label13" type="Label" parent="ColorRect2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Damage Dealt: "
horizontal_alignment = 1

[node name="Label14" type="Label" parent="ColorRect2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Average Damage per Hit: 0"
horizontal_alignment = 1

[node name="Label15" type="Label" parent="ColorRect2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Average Damage per Spell: 0"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="ColorRect2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Damage Taken:"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="ColorRect2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Damage Blocked:"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="ColorRect2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Damage Healed:"
horizontal_alignment = 1

[node name="Label7" type="Label" parent="ColorRect2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Perfect Blocks:"
horizontal_alignment = 1

[node name="Label8" type="Label" parent="ColorRect2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Good Blocks:"
horizontal_alignment = 1

[node name="Label9" type="Label" parent="ColorRect2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Bad Blocks:"
horizontal_alignment = 1

[node name="Label10" type="Label" parent="ColorRect2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "No Blocks:"
horizontal_alignment = 1

[node name="Label11" type="Label" parent="ColorRect2/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Enemies Killed:"
horizontal_alignment = 1

[node name="ExitButton" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 70.0
offset_bottom = 70.0
text = "EXIT"

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
